# trustpoint

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  Dockerfile  LICENSE  README.md  behave.ini  docker-compose.yaml  docker-compose.yml  postgre.Dockerfile  postgres.Dockerfile  pyproject.toml  requirements.txt  server.der  test.py  trustpoint-apache-http.conf  trustpoint-apache-https.conf
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md  generic.md  job_story.md  task.md
.github/workflows/: behave-features-test.yml  behave-test-template.yml  codecov-upload.yml  core-file-builder-test.yml  core-serializer-test.yml  core-test.yml  docker-manual.yml  dockerhub.yml  est-test.yml  f_001_feature_test.yml  main-ci-cd.yml  mypy.yml  pytest.yml  pytest_test.yml  r_001_feature_test.yml  r_003_feature_test.yml  r_004_feature_test.yml  r_006_feature_test.yml  r_007_feature_test.yml  r_008_feature_test.yml  r_010_feature_test.yml  r_011_feature_test.yml  r_012_feature_test.yml  r_013_feature_test.yml  r_101_feature_test.yml  r_102_feature_test.yml  r_103_feature_test.yml  r_104_feature_test.yml  ruff.yml  test-docker.yml
.github/workflows/unit_tests/: core-serializer-test.yml  est-test.yml
docker/: entrypoint.sh
docker/apache/: trustpoint-apache-http.conf  trustpoint-apache-https.conf  trustpoint-http-init.conf
docker/ntp/: ntp_status.sh  restart_ntp.sh  start_ntp.sh  stop_ntp.sh  update_ntp_config.sh
docker/wizard/: sudoers
docker/wizard/transition/: wizard_create_super_user.sh  wizard_demo_data.sh  wizard_initial.sh  wizard_tls_server_credential_apply.sh  wizard_tls_server_credential_apply_cancel.sh
docs/: README.md
docs/docker/: README.md
docs/source/: api_serializers.rst  community_support.rst  conf.py  development.rst  domains_gui.rst  faq.rst  glossary.rst  gui.rst  index.rst  introduction.rst  issued_certificates.rst  onboarding.rst  pki.rst  pki_issuing_ca.rst  pki_models.rst  poetry_environment.rst  quickstart.rst  quickstart_operate.rst  quickstart_setup.rst  requirements.txt  serializers.rst  test_plan.rst  usage_guide.rst
docs/source/_static/: Untitled Diagram.drawio
docs/source/api/: api.rst
docs/source/test_plan/: approach_strategy.rst  environmental_needs.rst  features_not_to_be_tested.rst  features_to_be_tested.rst  introduction.rst  item_pass_fail_criteria.rst  planning_risks_and_contingencies.rst  remaining_test_tasks.rst  responsibilities.rst  schedule.rst  (+10 more)
docs/unused/: architecture.rst  domains.rst  domains_gui.rst  issuing_cas_gui.rst  pki_models.rst  validators.rst
tests/scripts/: est_csr.py
tmp/devices/: __init__.py  models.py  tables.py  urls.py  views.py
tmp/devices_deprecated/: __init__.py  api.py  apps.py  exceptions.py  forms.py  models.py  signals.py  tables.py  tests.py  urls.py  views.py
tmp/home/: __init__.py  admin.py  filters.py  models.py  urls.py  views.py
tmp/log/: __init__.py  config.py  models.py  urfgdsfdsfls.py  views.py
tmp/onboarding_deprecated/: admin.py  api.py  apps.py  cli_builder.py  crypto_backend.py  models.py  schema.py  tests.py  urls.py  views.py
tmp/pki/: admin.py  api.py  schema.py  tables.py  urls.py  views.py
tmp/util/: __init__.py  ca.py  keys.py  x509.py
trustpoint/: behave.ini  manage.py  pytest.ini
trustpoint/cmp/: __init__.py  apps.py  urls.py  util.py  views.py
trustpoint/core/: archiver.py  oid.py  x509.py
trustpoint/dashboard/: urls.py  views.py
trustpoint/devices/: __init__.py  admin.py  api.py  apps.py  exceptions.py  filters.py  forms.py  issuer.py  models.py  revocation.py  signals.py  tables.py  urls.py  views.py  widgets.py
trustpoint/discovery/: __init__.py  admin.py  apps.py  mdns.py  models.py  tests.py  views.py
trustpoint/est/: apps.py  urls.py  views.py
trustpoint/features/: F_001_nteu_identity_onboarding.feature  R_001.feature  R_001_CRUD.feature  R_002.feature  R_003_certificate_lifecycle.feature  R_004.feature  R_004_REST_API.feature  R_005.feature  R_006_backup_restore_update.feature  R_007_logging.feature  R_008_auto_issuing_ca.feature  R_010_cmp_endpoint.feature  R_011_est_endpoint.feature  R_012_multi_language_support.feature  R_013_remote_credential_download.feature  R_101_device_cert_validation.feature  R_102_encrypted_communication.feature  R_103_security_configuration.feature  R_104_certificate_template_security.feature  environment.py  est.feature  lcmp.feature
trustpoint/home/: __init__.py  admin.py  api.py  apps.py  filters.py  models.py  tables.py  tests.py  urls.py  views.py
trustpoint/log/: admin.py  apps.py  config.py  tables.py  tests.py  urls.py  utils.py  views.py
trustpoint/onboarding/: __init__.py  api.py  apps.py  cli_builder.py  cryptoBackend.py  crypto_backend.py  forms.py  models.py  schema.py  tests.py  urls.py  views.py
trustpoint/pki/: __init__.py  admin.py  api.py  apps.py  auto_gen_pki.py  certificate_request.py  crypto_backend.py  dispatcher.py  domain.py  est_server.py  est_urls.py  files.py  forms.py  initializer.py  issuing_ca.py  message.py  models.py  oid.py  p12.p12  pki_message.py  pki_request.py  serializer.py  signals.py  stuff.py  tables.py  tasks.py  test.cnf  tests.py  urls.py  util.py  validator.py  views.py
trustpoint/ra/: apps.py  urls.py  views.py
trustpoint/settings/: admin.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py
trustpoint/setup_wizard/: __init__.py  apps.py  forms.py  startup.py  tls_credential.py  urls.py  views.py
trustpoint/startup/: __init__.py  admin.py  apps.py  models.py  startup.py  tests.py  views.py
trustpoint/sysconf/: apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
trustpoint/trustpoint/: __init__.py  api.py  asgi.py  celery.py  dev_secret_key.txt  logging.py  pytest.ini  schema.py  settings.py  urls.py  validators.py  views.py  wsgi.py
trustpoint/users/: __init__.py  admin.py  api.py  apps.py  models.py  scheduler.py  signals.py  tasks.py  tests.py  urls.py  views.py
trustpoint/util/: keys.py  network.py  strings.py
(+685 files in other folders)
