[project]
name = "trustpoint"
version = "0.1.1"
description = "Trustpoint Server Software"
authors = [{ name = "TrustPoint-Project" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "behave-django>=1.5.0",
    "crispy-bootstrap5~=2024.10",
    "cryptography>=44.0.0,<45",
    "django>=5.1.6,<6",
    "django-crispy-forms~=2.3",
    "django-extensions>=3.2.3",
    "django-filter~=24.3",
    "django-ninja>=1.3.0,<2",
    "django-stubs>=5.1.3,<6",
    "django-stubs-ext>=5.1.3,<6",
    "django-taggit>=6.1.0,<7",
    "furo>=2024.8.6",
    "psycopg>=3.2.4",
    "psycopg-binary>=3.2.4",
    "pyasn1>=0.6.1,<0.7",
    "pyasn1-modules>=0.4.1,<0.5",
    "ruff>=0.7.4",
    "sphinxcontrib-plantuml>=0.30",
    "zeroconf>=0.144.1,<0.145",
]

[dependency-groups]
dev = [
    "behave>=1.2.7.dev6",
    "behave-html-pretty-formatter>=1.12.3",
    "devtools>=0.12.2,<0.13",
    "docutils-stubs>=0.0.22,<0.0.23",
    "mypy>=1.15.0,<2",
    "pillow>=11.0.0,<12",
    "pyopenssl>=25,<26",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-emoji>=0.2.0",
    "pytest-html>=4.1.1",
    "pytest-md>=0.2.0",
    "pre-commit>=4.1.0",
    "sphinx>=8.1.3,<9",
    "werkzeug>=3.1.3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", "ANN102", "ANN401",
    "D203", "D213", "D415",
    "TD003",
    # TODO(Alex): FIX should be added again, after we are departing from the PoC phase
    "FIX",
    "COM812",               # Not compatible with the formatter
    "ISC001",               # Not compatible with the formatter
    "S101",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "trustpoint.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'trustpoint.settings'
python_files = 'test_*.py'

