[project]
name = "trustpoint"
version = "0.1.1"
description = "Trustpoint Server Software"
authors = [{ name = "TrustPoint-Project" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "crispy-bootstrap5~=2024.10",
    "cryptography>=44.0.1",
    "django>=5.1.6,<6",
    "django-crispy-forms~=2.3",
    "django-filter~=25.1",
    "django-stubs>=5.1.3,<6",
    "django-stubs-ext>=5.1.3,<6",
    "django-taggit>=6.1.0,<7",
    "psycopg>=3.2.4",
    "psycopg-binary>=3.2.4",
    "pyasn1>=0.6.1,<0.7",
    "pyasn1-modules>=0.4.1,<0.5",
    "zeroconf>=0.145,<0.146",
]

# Dev dependencies only used in a local environment.
[dependency-groups]
dev = [
    "behave-django>=1.5.0",
    "behave>=1.2.7.dev6",
    "behave-html-pretty-formatter>=1.12.3",
    "devtools>=0.12.2,<0.13",
    "django-extensions>=3.2.3",
    "docutils-stubs>=0.0.22,<0.0.23",
    "mypy>=1.15.0,<2",
    "furo>=2024.8.6",
    "pillow>=11.0.0,<12",
    "pyopenssl>=25,<26",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-emoji>=0.2.0",
    "pytest-html>=4.1.1",
    "pytest-md>=0.2.0",
    "pre-commit>=4.1.0",
    "ruff>=0.7.4",
    "sphinx>=8.1.3,<9",
    "sphinxcontrib-plantuml>=0.30",
    "werkzeug>=3.1.3,<4",
    "pytest-md-report>=0.6.3",
]

# Optional dependencies used for the pip env created by readthedocs
[project.optional-dependencies]
dev = [
    "behave-django>=1.5.0",
    "behave>=1.2.7.dev6",
    "behave-html-pretty-formatter>=1.12.3",
    "devtools>=0.12.2,<0.13",
    "django-extensions>=3.2.3",
    "docutils-stubs>=0.0.22,<0.0.23",
    "mypy>=1.15.0,<2",
    "furo>=2024.8.6",
    "pillow>=11.0.0,<12",
    "pyopenssl>=25,<26",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-emoji>=0.2.0",
    "pytest-html>=4.1.1",
    "pytest-md>=0.2.0",
    "pre-commit>=4.1.0",
    "ruff>=0.7.4",
    "sphinx>=8.1.3,<9",
    "sphinxcontrib-plantuml>=0.30",
    "werkzeug>=3.1.3,<4",
    "pytest-md-report>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "D203", "D213", "D415",
    "TD003",
    # TODO(Alex): FIX should be added again, after we are departing from the PoC phase
    "FIX",
    "COM812", # Not compatible with the formatter
    "ISC001", # Not compatible with the formatter
    "S101",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "trustpoint.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'trustpoint.settings'
python_files = 'test_*.py'
md_report = true
md_report_output = 'md-report.md'

[tool.behave]
default_format = 'behave_html_pretty_formatter:PrettyHTMLFormatter'
outfiles = ['behave-report.html']
paths = ['trustpoint/features/']

[tool.behave.userdata]
'behave.formatter.html-pretty.title_string' = 'TrustPoint Test Report'
'behave.formatter.html-pretty.show_summary' = 'true'
'behave.formatter.html-pretty.collapse' = 'all'
